# oro-view

./: .gitignore  CMakeLists.txt  INSTALL  Makefile.am  README  README.md  TODO  aclocal.m4  configure.ac  jsoncpp.pc  oro_connector
etc/: oro-view.json  oroview-demo.json  oroview-work.json
src/: constants.cpp  constants.h  edge.cpp  edge.h  edge_renderer.cpp  edge_renderer.h  graph.cpp  graph.h  macros.h  main.cpp  main_test.cpp  node.cpp  node.h  node_relation.cpp  node_relation.h  node_renderer.cpp  node_renderer.h  noderelation.cpp  noderelation.h  oro_connector.cpp  oro_connector.h  oroview.cpp  oroview.h  oroview_exceptions.h  spline.cpp  spline.h  styles.cpp  styles.h
src/core/: camera.cpp  display.cpp  fxfont.cpp  fxfont.h  sdlapp.cpp  sdlapp.h
